<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="example_switch"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:title="@string/pref_title_social_recommendations" />-->

    <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
         <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->

    <PreferenceCategory
        android:key="pref_user_data_settings"
        android:title="@string/pref_title_user_data">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:key="@string/KEY_NAME"
            android:title="@string/pref_user_data_name_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:key="@string/KEY_LAST_NAME"
            android:title="@string/pref_user_data_last_name_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:key="@string/KEY_ADDRESS"
            android:title="@string/pref_user_data_address_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:key="@string/KEY_ZIP_CODE"
            android:title="@string/pref_user_data_zip_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:key="@string/KEY_CITY"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_user_data_city_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="phone"
            android:key="@string/KEY_PHONE"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_user_data_phone_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="phone"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:key="@string/KEY_MOBILE"
            android:title="@string/pref_user_data_mobile_title" />
    </PreferenceCategory>


</PreferenceScreen>
