<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--&lt;!&ndash; A 'parent' preference, which enables/disables child preferences (below)-->
         <!--when checked/unchecked. &ndash;&gt;-->
    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="notifications_new_message"-->
        <!--android:title="@string/pref_title_new_message_notifications" />-->

    <!--&lt;!&ndash; Allows the user to choose a ringtone in the 'notification' category. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: RingtonePreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<RingtonePreference-->
        <!--android:defaultValue="content://settings/system/notification_sound"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_ringtone"-->
        <!--android:ringtoneType="notification"-->
        <!--android:title="@string/pref_title_ringtone" />-->

    <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_vibrate"-->
        <!--android:title="@string/pref_title_vibrate" />-->

    <PreferenceCategory
        android:key="pref_key_firm_data_settings"
        android:title="@string/pref_title_firm_data">
        <SwitchPreference
            android:key="pref_firm_data_toggle"
            android:title="@string/pref_firm_data_available_title"
            android:summary="@string/pref_firm_data_toggle_summ"
            android:defaultValue="off" />

        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:dependency="pref_firm_data_toggle"
            android:key="@string/KEY_FIRM_NAME"
            android:title="@string/pref_firm_data_name_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:dependency="pref_firm_data_toggle"
            android:key="@string/KEY_FIRM_ADDRESS"
            android:title="@string/pref_firm_data_address_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:dependency="pref_firm_data_toggle"
            android:key="@string/KEY_FIRM_ID"
            android:title="@string/pref_firm_data_ID_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_edit_text_value_unset"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:dependency="pref_firm_data_toggle"
            android:key="@string/KEY_FIRM_PIB"
            android:title="@string/pref_firm_data_PIB_title" />

    </PreferenceCategory>

</PreferenceScreen>
